🎨 更新記事本樣式

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,3 +55,24 @@
     scrollbar-width: none;  /* Firefox */
   }
 }
+
+
+button,
+[role="button"],
+a,
+label,
+select,
+input[type="button"],
+input[type="submit"],
+input[type="reset"],
+input[type="checkbox"],
+input[type="radio"] {
+  cursor: pointer;
+}
+
+button:disabled,
+input:disabled,
+select:disabled,
+[aria-disabled="true"] {
+  cursor: not-allowed;
+}
